# openai-agents

./: .env.example  .gitignore  AGENTS.md  MEMORY.md  Makefile  README.md  SOUL.md  USER.md  eslint.config.js  jscpd.json  knip.json  package.json  pnpm-lock.yaml  prd.json.example
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  design.yml  feature.yml
.github/workflows/: ci.yml
apps/admin/: .gitignore  README.md  package.json  vite.config.js
apps/admin/src-tauri/: Cargo.toml  tauri.conf.json
config/: control-plane.example.json  family.example.json  halo.example.json  nodes.example.json
docs/: 00-vision.md  01-scope.md  02-telegram-setup.md  03-architecture.md  04-config.md  05-policies.md  06-onboarding.md  06-workflow.md  08-roadmap.md  11-troubleshooting.md  12-tools.md  13-semantic-indexing-strategy.md  14-openai-file-search-telegram-upload-plan.md  15-telegram-image-vision-wiring.md  17-family-architecture-discussion-in-progress.md  18-policy-control-plane-blueprint.md  19-backup-restore-and-incident-runbook.md  PROJECT-OVERVIEW.md
docs/archive/: 00-vision.md  01-scope.md  04-config.md  07-compounding-loop.md  10-smoke-tests.md  11-troubleshooting.md  14-openai-file-search-telegram-upload-plan.md  16-tool-integration-onboarding-options.md  PROJECT-OVERVIEW.md  README.md  onboarding-plan.md  phase3-plan.md
memory/: 2026-02-02.md
plan/: 36-2026-02-17-production-ready-pack-sequencing-plan.md  README.md
reports/: example.md
scripts/: smoke-e2e.sh
scripts/dev/: gateway-wrapper.sh  (+1 more)
tasks/: prd.example.md
(+180 files in other folders)
